[gd_scene load_steps=52 format=3 uid="uid://pa6csgs0nnvs"]

[ext_resource type="Script" path="res://World/Objects/Nature/Trees/Log.gd" id="1_uhde7"]
[ext_resource type="Texture2D" uid="uid://b07sxih7d5ic0" path="res://Assets/Tilesets/terrain/CL_Crops_Mining.png" id="2_sdldq"]
[ext_resource type="Texture2D" uid="uid://wp5yanf00ax2" path="res://Assets/Images/Animations/log breaks/1.png" id="3_ppkj8"]

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BranchHurtBox/branchHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="3"]
resource_name = "break"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BranchHurtBox/branchHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Break:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yqu64"]
_data = {
"RESET": SubResource("2"),
"break": SubResource("3")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_edaud"]
texture = ExtResource("2_sdldq")
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
13:33/0 = 0
14:33/0 = 0
15:33/0 = 0
13:34/0 = 0
14:34/0 = 0
15:34/0 = 0

[sub_resource type="TileSet" id="TileSet_ub2pw"]
sources/0 = SubResource("TileSetAtlasSource_edaud")

[sub_resource type="AtlasTexture" id="AtlasTexture_e2ntt"]
atlas = ExtResource("3_ppkj8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyx6b"]
atlas = ExtResource("3_ppkj8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nolw"]
atlas = ExtResource("3_ppkj8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvg6s"]
atlas = ExtResource("3_ppkj8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1222"]
atlas = ExtResource("3_ppkj8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq8to"]
atlas = ExtResource("3_ppkj8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq8v4"]
atlas = ExtResource("3_ppkj8")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff1ou"]
atlas = ExtResource("3_ppkj8")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbnlg"]
atlas = ExtResource("3_ppkj8")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwnw"]
atlas = ExtResource("3_ppkj8")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_we4n3"]
atlas = ExtResource("3_ppkj8")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kugp4"]
atlas = ExtResource("3_ppkj8")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d0hv"]
atlas = ExtResource("3_ppkj8")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu22y"]
atlas = ExtResource("3_ppkj8")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8txq"]
atlas = ExtResource("3_ppkj8")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xka7j"]
atlas = ExtResource("3_ppkj8")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xx6v"]
atlas = ExtResource("3_ppkj8")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2wgi"]
atlas = ExtResource("3_ppkj8")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5b2l"]
atlas = ExtResource("3_ppkj8")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2005y"]
atlas = ExtResource("3_ppkj8")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ws3g"]
atlas = ExtResource("3_ppkj8")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxj6o"]
atlas = ExtResource("3_ppkj8")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_len7h"]
atlas = ExtResource("3_ppkj8")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceknx"]
atlas = ExtResource("3_ppkj8")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4br8"]
atlas = ExtResource("3_ppkj8")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3bw1"]
atlas = ExtResource("3_ppkj8")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_thdhb"]
atlas = ExtResource("3_ppkj8")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxawt"]
atlas = ExtResource("3_ppkj8")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u64w"]
atlas = ExtResource("3_ppkj8")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_480vt"]
atlas = ExtResource("3_ppkj8")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cravs"]
atlas = ExtResource("3_ppkj8")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7uqg"]
atlas = ExtResource("3_ppkj8")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhisg"]
atlas = ExtResource("3_ppkj8")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddrhg"]
atlas = ExtResource("3_ppkj8")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuimw"]
atlas = ExtResource("3_ppkj8")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_og2uq"]
atlas = ExtResource("3_ppkj8")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5be3x"]
atlas = ExtResource("3_ppkj8")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a8tm"]
atlas = ExtResource("3_ppkj8")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvhm7"]
atlas = ExtResource("3_ppkj8")
region = Rect2(288, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fpcl"]
atlas = ExtResource("3_ppkj8")
region = Rect2(336, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7tojc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2ntt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyx6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nolw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvg6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1222")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq8to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq8v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff1ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbnlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we4n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kugp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d0hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8txq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xka7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xx6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2wgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5b2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2005y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ws3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxj6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_len7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceknx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4br8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3bw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thdhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxawt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u64w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_480vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cravs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7uqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhisg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddrhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuimw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og2uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5be3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a8tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvhm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fpcl")
}],
"loop": false,
"name": &"break",
"speed": 20.0
}]

[node name="Log" type="Node2D"]
modulate = Color(1.3, 1.3, 1.3, 1)
scale = Vector2(0.9, 0.9)
script = ExtResource("1_uhde7")

[node name="MovementCollisionBox" type="StaticBody2D" parent="."]
position = Vector2(8, -8)
collision_layer = 3

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox"]
shape = SubResource("6")

[node name="BranchHurtBox" type="Area2D" parent="."]
position = Vector2(8, -8)
collision_layer = 0
collision_mask = 262152

[node name="branchHurtBox" type="CollisionShape2D" parent="BranchHurtBox"]
shape = SubResource("5")

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
visible = false
volume_db = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yqu64")
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-2, 2)
scale = Vector2(1.35, 1.35)
tile_set = SubResource("TileSet_ub2pw")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 851968, 33)

[node name="Break" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0.5, -15)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_7tojc")
animation = &"break"

[connection signal="area_entered" from="BranchHurtBox" to="." method="_on_BranchHurtBox_area_entered"]
